Solaris/autoconf patch from Jonathan Abbey <jonabbey@ganymeta.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -14,12 +14,13 @@ sbin_PROGRAMS = iftop
 
 iftop_SOURCES = addr_hash.c edline.c hash.c iftop.c ns_hash.c \
                  options.c resolver.c screenfilter.c serv_hash.c \
-                 sorted_list.c threadprof.c ui.c util.c
+                 sorted_list.c threadprof.c ui.c util.c \
+		 addrs_ioctl.c addrs_dlpi.c dlcommon.c
 
 noinst_HEADERS = addr_hash.h ether.h ethertype.h extract.h hash.h iftop.h \
                  integers.h ip.h llc.h ns_hash.h options.h resolver.h \
                  screenfilter.h serv_hash.h sll.h sorted_list.h tcp.h \
-                 threadprof.h token.h ui.h
+                 threadprof.h token.h ui.h dlcommon.h
 
 man_MANS = iftop.8
 
@@ -30,8 +31,8 @@ iftop.cat: iftop.8
 
 ## These need to be distributed along with configure:
 
-EXTRA_DIST = bootstrap README CHANGES COPYING INSTALL TODO Makefile.OLD \
-             $(man_MANS) iftop.cat
+EXTRA_DIST = bootstrap README ChangeLog AUTHORS COPYING INSTALL TODO \
+		Makefile.OLD $(man_MANS) iftop.cat
              
 MAINTERCLEANFILES = Makefile.in aclocal.m4 configure configuration.h.in \
                     stamp-h.in
