--- a/Makefile.am
+++ b/Makefile.am
@@ -10,13 +10,21 @@
 # $Id$
 #
 
-sbin_PROGRAMS = iftop
+sbin_PROGRAMS = iftop iftop-dump
 
 iftop_SOURCES = addr_hash.c edline.c hash.c iftop.c ns_hash.c \
                  options.c resolver.c screenfilter.c serv_hash.c \
                  sorted_list.c threadprof.c ui.c util.c \
 		 addrs_ioctl.c addrs_dlpi.c dlcommon.c \
 		 stringmap.c cfgfile.c vector.c
+
+iftop_dump_SOURCES = counter_hash.c hash.c iftop-dump.c  \
+                 options.c \
+                 util.c \
+		 addrs_ioctl.c addrs_dlpi.c dlcommon.c \
+		 stringmap.c cfgfile.c 
+
+
 
 noinst_HEADERS = addr_hash.h ether.h ethertype.h extract.h hash.h iftop.h \
                  integers.h ip.h llc.h ns_hash.h options.h resolver.h \
