Updated changelog and pre-release notice.

--- a/configure.in
+++ b/configure.in
@@ -29,7 +29,7 @@ AC_CONFIG_AUX_DIR(config)
 AC_CANONICAL_SYSTEM
 
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(iftop, "0.17")
+AM_INIT_AUTOMAKE(iftop, "1.0pre1")
 
 AC_DEFINE_UNQUOTED(IFTOP_VERSION, "$VERSION", [The iftop version number])
 
@@ -452,10 +452,9 @@ This is a pre-release version.  Pre-releases are subject to limited
 announcements, and therefore limited circulation, as a means of testing
 the more widely circulated final releases.  
 
-Please do not be surprised if this release is utterly, utterly broken.  If you
-do find this release to be utterly, utterly broken, do not assume that someone
-else has spotted it.  Instead, please drop a note on the mailing list,
-or a brief email to me on pdw@ex-parrot.com
+Please do not be surprised if this release is broken, and if it is broken, do
+not assume that someone else has spotted it.  Instead, please drop a note on
+the mailing list, or a brief email to me on pdw@ex-parrot.com
 
 Thank you for taking the time to be the testing phase of this development
 process.
