Patch by Robert Scheck <robert@fedoraproject.org> for iftop >= 0.17, which works around a PuTTY issue (doesn't honor vt100 line-drawing when in UTF-8 mode) to get sane lines drawn instead of letters. When using PuTTY in UTF-8 mode, you have to execute "NCURSES_NO_UTF8_ACS=1 iftop" in the future. Technically, relinking from curses to ncursesw is just half of the solution, calling setlocale() is the rest. For further information, please have a look to Red Hat Bugzilla, bug ID #546032: https://bugzilla.redhat.com/show_bug.cgi?id=546032

--- a/configure.in
+++ b/configure.in
@@ -352,7 +352,7 @@ dnl
 
 AC_MSG_CHECKING([for a curses library containing mvchgat])
 oldLIBS=$LIBS
-for curseslib in curses ncurses ; do
+for curseslib in ncursesw curses ncurses ; do
     LIBS="$oldLIBS -l$curseslib"
     AC_TRY_LINK([
 #include <curses.h>
